# client-superstaq

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.bib  Infleqtion_DCM3_Challenge.ipynb  Infleqtion_DCM3_Challenge_SOLUTION.ipynb  Infleqtion_DCM3_Training.ipynb  LICENSE  LICENSE.txt  README.md  build_docs.py  check  deleteme.ipynb  dev-requirements.txt  install-dev.sh  install.sh  neutral-atom-requirements.txt  pyproject.toml  repro-requirements.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  utils.py  v0_3_0_demo_notebook.ipynb
checks-superstaq/: README.md  pyproject.toml  requirements.txt
checks-superstaq/checks_superstaq/: __init__.py  _checks.py  _version.py  add_license_header_.py  all_.py  build_docs.py  check_utils.py  checks-pyproject.toml  checks_init.py  configs.py  coverage_.py  flake8_.py  format_.py  init_return.py  license_header_.py  license_header_format_.py  licenses.py  lint_.py  mypy_.py  pylint_.py  pylint_import_annotations.py  pylint_init_return.py  pytest_.py  requirements.py  ruff_.py  ruff_check.py  ruff_format.py  ruff_format_.py  ruff_lint_.py  ty_.py
cirq-superstaq/: .isort.cfg  README.md  dev-requirements.txt  example-requirements.txt  pyproject.toml  requirements.txt  setup.py  stim-requirements.txt
cirq-superstaq/cirq_superstaq/: .version  MSD_15_to_1.json  MSD_7_to_1.json  __init__.py  _version_test.py  compiler_output.py  compiler_output_test.py  conftest.py  daily_integration_test.py  evaluation.py  evaluation_test.py  ft_compiler.py  ft_compiler_test.py  hilbert_daily_integration_test.py  job.py  job_test.py  resource_counters.py  resource_counters_test.py  sampler.py  serialization.py  serialization_test.py  service.py  service_test.py  validation.py  validation_test.py  worker.py  worker_test.py
cirq-superstaq/cirq_superstaq/circuits/: MSD_15_to_1.py  MSD_5_to_1.py  MSD_7_to_1.py  __init__.py  msd.py  msd_15_to_1_test.py  msd_5_to_1.py  msd_5_to_1_test.py  msd_7_to_1.py  msd_7_to_1_test.py  msd_test.py
cirq-superstaq/cirq_superstaq/msd/: MSD_15_to_1.py  MSD_5_to_1.py  MSD_7_to_1.py  MSD_test_cases.py
cirq-superstaq/cirq_superstaq/ops/: __init__.py  qubit_gates.py  qubit_gates_test.py  qudit_gates.py  qudit_gates_test.py
cirq-superstaq/cirq_superstaq/qcvv/: base_experiment_test.py  irb.py  irb_test.py  xeb.py  xeb_test.py
cirq-superstaq/cirq_superstaq/sim/: __init__.py  conftest.py  leakage_sim.py  leakage_sim_test.py  ops.py  ops_test.py  sqale_leakage_model.py  sqale_leakage_model_test.py
cirq-superstaq/docs/: access.md  getting_started_cirq_superstaq.ipynb  ibm_cirq_superstaq.ipynb
cirq-superstaq/examples/: SupercheQ.ipynb  aqt.ipynb  cirq_superstaq_example.py  cq_compile.ipynb  finance.ipynb  ibmq_compile.ipynb  qscout_compile.ipynb  resource_estimate.ipynb
cirq-superstaq/examples/static/: file3.txt
general-superstaq/: .isort.cfg  README.md  dev-requirements.txt  example-requirements.txt  jaqal-requirements.txt  pyproject.toml  requirements.txt  setup.py
general-superstaq/general_superstaq/: __init__.py  _init_vars.py  _models.py  _models_test.py  _version.py  _version_test.py  compiler_output.py  compiler_output_test.py  finance.py  job.py  job_test.py  logistics.py  logistics_test.py  machine_api.py  machine_api_test.py  models.py  models_test.py  pretty_printing.py  pretty_printing_test.py  py.typed  qubo.py  qubo_test.py  resource_estimate.py  resource_estimate_test.py  serialization.py  serialization_test.py  service.py  service_test.py  superstaq_client.py  superstaq_client_new_test.py  superstaq_client_test.py  superstaq_exceptions.py  superstaq_exceptions_test.py  test.ipynb  testing.py  typing.py  typing_test.py  user_config.py  user_config_test.py  validation.py  (+1 more)
general-superstaq/general_superstaq/check/: __init__.py  all_.py  build_docs.py  check_utils.py  configs.py  coverage_.py  flake8_.py  format_.py  mypy_.py  pylint_.py  pyproject.toml  pytest_.py  requirements.py  setup.cfg
qiskit-superstaq/: .isort.cfg  README.md  dev-requirements.txt  example-requirements.txt  pyproject.toml  requirements.txt  setup.py
qiskit-superstaq/examples/: aqt.ipynb  hello_qiskit_superstaq.py  ibmq_compile.ipynb  multiple_circuits.py  pulse_manipulator_example.ipynb  qscout_compile.ipynb  qscout_tutorial.ipynb  resource_estimate.ipynb  uchicago_workshop.ipynb
qiskit-superstaq/examples/static/: file11.txt  file7.txt
qiskit-superstaq/personal/: hack_requirements.txt  pulser_playground.ipynb  qiskit_pulse_playground.ipynb
qiskit-superstaq/qiskit_superstaq/: .version  __init__.py  _version_test.py  compiler_output.py  compiler_output_test.py  conftest.py  custom_gates.py  custom_gates_test.py  daily_integration_test.py  hilbert_daily_integration_test.py  pulse_manipulator.py  pulse_manipulator_specification.txt  serialization.py  serialization_test.py  superstaq_backend.py  superstaq_backend_test.py  superstaq_job.py  superstaq_job_test.py  superstaq_provider.py  superstaq_provider_test.py  validation.py  validation_test.py
supermarq-benchmarks/: .isort.cfg  README.md  check  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
supermarq-benchmarks/docs/: CNAME
supermarq-benchmarks/examples/: Kate-hack-week-demo-notebook.ipynb  SupermarQ_HPCA_Tutorial.ipynb  Supermarq_HPCA_Tutorial.ipynb  Supermarq_HPCA_Tutorial_css.ipynb  Supermarq_HPCA_Tutorial_qss.ipynb  ghz_example.py  local_tests_kate.py
supermarq-benchmarks/examples/qcvv/: qcvv.rst  qcvv_css.ipynb  qcvv_irb_css.ipynb  qcvv_su2_css.ipynb  qcvv_xeb_css.ipynb
supermarq-benchmarks/examples/qre-challenge/: K-SAT.qs  Lessons-Learned.md  README.md  grovers-ksat.ipynb  requirements.txt
supermarq-benchmarks/supermarq/: __init__.py  _version_test.py  benchmark.py  benchmark_test.py  converters.py  converters_test.py  features.py  features_test.py  plotting.py  plotting_test.py  run_benchmarks.py  run_supermarq.py  simulation.py  stabilizers.py  stabilizers_test.py
supermarq-benchmarks/supermarq/benchmarks/: __init__.py  bacon_shor_code.py  bit_code.py  bit_code_test.py  ghz.py  ghz_test.py  hamiltonian_simulation.py  (+14 more)
(+396 files in other folders)
