[project]
name = "cirq-superstaq"
description = "The Cirq module that provides tools and access to Superstaq."
authors = [{ name = "Super.tech", email = "pranav@super.tech" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2" }
requires-python = ">=3.7.0"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/Infleqtion/client-superstaq"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cirq_superstaq*"]

[tool.setuptools.package-data]
cirq_superstaq = ["py.typed"]

[tool.setuptools.dynamic.version]
attr = "cirq_superstaq/._version.__version__"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["dev-requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.examples]
file = ["example-requirements.txt"]
