[project]
name = "general-superstaq"
version = "0.3.33"
description = "The general module that provides tools and access to Superstaq."
authors = [{ name = "Super.tech", email = "pranav@super.tech" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2" }
requires-python = ">=3.7.0"
urls = { homepage = "https://github.com/Infleqtion/client-superstaq" }
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["general_superstaq*"]

[tool.setuptools.package-data]
general_superstaq = ["py.typed"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["dev-requirements.txt"]
