[project]
name = "qiskit-superstaq"
version = "0.3.31"
description = "The qiskit module that provides tools and access to SuperstaQ"
authors = [{ name = "Super.tech", email = "pranav@super.tech" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2" }
requires-python = ">=3.7.0"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qiskit_superstaq*"]

[tool.setuptools.package-data]
qiskit_superstaq = ["py.typed"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["dev-requirements.txt"]
