[project]
name = "Supermarq"
version = "0.3.33"
description = "Supermarq is a scalable, application-centric quantum benchmarking suite."
authors = [{ name = "Super.tech", email = "pranav@super.tech" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2" }
requires-python = ">=3.7.0"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["supermarq*"]

[tool.setuptools.package-data]
supermarq = ["py.typed"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["dev-requirements.txt"]
