[project]
name = "Supermarq"
description = "Supermarq is a scalable, application-centric quantum benchmarking suite."
authors = [
  { name = "Superstaq development team", email = "superstaq@infleqtion.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.8.0"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/Infleqtion/client-superstaq"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["supermarq*"]

[tool.setuptools.package-data]
supermarq = ["py.typed"]

[tool.setuptools.dynamic.version]
attr = "supermarq._version.__version__"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["dev-requirements.txt"]

[tool.isort]
profile = "black"
line_length = 100
color_output = true
known_first_party = "supermarq"
